# Kazbars

./: .gitignore  .pre-commit-config.yaml  DESIGN.json  DESIGN.md  PRODUCT.md  README.md  build.py  kazbars.spec  kzgrids.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-notes.md  release.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  ota-manifest.yml  release.yml
Modules/: boss_timer.py  buff_display_editor.py  build_action.py  build_executor.py  build_loading.py  combat_monitor.py  custom_menu_bar.py  database_editor.py  first_launch.py  game_folder.py  grid_dialogs.py  grid_model.py  grids_panel.py  instructions_panel.py  live_tracker_panel.py  profile_io.py  settings_manager.py  ui_components.py  ui_helpers.py  ui_tk_style.py  ui_widgets.py  update_check.py  window_position.py
assets/kzgrids/: Database.json  Database.json.default  Default.json
docs/: CHANGELOG.md  README.md  architecture-notes.md  architecture.md  audit-architetturale.md  database-changelog.md  flows.md
docs/design/: settings-content-overhaul.md
ota/: manifest.json
scripts/: gen_manifest.py
src/kazbars/: __init__.py  __main__.py  app.py  app_popups.py  boss_timer.py  buff_database.py  buff_db_layers.py  buff_display_editor.py  buff_xml.py  build_action.py  build_executor.py  build_loading.py  build_utils.py  cast_timer.py  cast_timer_strip.py  combat_monitor.py  content_update.py  custom_menu_bar.py  damageinfo_colors_panel.py  damageinfo_generator.py  damageinfo_panel.py  damageinfo_settings.py  database_editor.py  deeps_meter.py  deeps_overlay.py  deeps_panel.py  deeps_parsers.py  deeps_rolling_window.py  deeps_settings.py  deeps_trackers.py  first_launch.py  focus_watcher.py  foreground.py  game_folder.py  game_resolution.py  grid_dialogs.py  grid_editor_panel.py  grid_model.py  grids_generator.py  grids_panel.py  (+25 more)
src/kazbars/assets/common_stubs/com/GameInterface/Game/: Character.as  CharacterBase.as
src/kazbars/assets/damageinfo/: DamageInfo.swf
src/kazbars/assets/damageinfo/src/: NumbersContainer.as
src/kazbars/assets/damageinfo/src/__Packages/: DamageNumberManager.as  DamageTextContent.as  MainDamageNumbers.as
src/kazbars/assets/damageinfo/src/__Packages/com/: GlobalSignal.as
src/kazbars/assets/damageinfo/src/__Packages/com/GameInterface/: DistributedValue.as  DistributedValueBase.as  HTMLFont.as  Utils.as  UtilsBase.as
src/kazbars/assets/damageinfo/src/__Packages/com/GameInterface/Game/: Character.as
src/kazbars/assets/damageinfo/src/__Packages/com/Utils/: Format.as  Signal.as  SignalGroup.as  Slot.as  WeakPtr.as
src/kazbars/assets/damageinfo/src/__Packages/com/helperFramework/display/: FixOnLoad.as
src/kazbars/assets/damageinfo/src/__Packages/com/helperFramework/utils/: ArrayUtils.as  Relegate.as
src/kazbars/assets/damageinfo/src/__Packages/helpers/: NumbersFontsCollection.as  ObjectPool.as
src/kazbars/assets/damageinfo/src/__Packages/numbersManagers/: AbstractManager.as  FixedManager.as  MovingManager.as  NumbersColumn.as
src/kazbars/assets/damageinfo/src/__Packages/numbersTypes/: DamageTextAbstract.as  FixedDamageText.as  MovingDamageText.as
src/kazbars/assets/damageinfo/src/frame_1/: DoAction.as
src/kazbars/assets/deeps/: pets.json
src/kazbars/assets/kazbars/: Database.json  Database.json.default  Default.json  KazBars_core.as.template  KzGrids_core.as.template  base.fla  base.swf
src/kazbars/assets/kazbars/stubs/: KazBarsCastTimer.as  KazBarsConsole.as  KazBarsPreview.as  KazBarsSlot.as  KazBarsStopwatch.as  KzGridsCastTimer.as  KzGridsConsole.as  KzGridsPreview.as  KzGridsSlot.as
src/kazbars/assets/kazbars/stubs/com/Utils/: ID32.as  ImageLoader.as
tests/: test_app_contract.py  test_boss_timer.py  test_buff_db_layers.py  test_buff_xml.py  test_build_compile.py  test_build_executor.py  test_cast_timer.py  test_cluster_isolation.py  test_combat_monitor.py  test_content_update.py  test_damageinfo_colors_panel.py  test_damageinfo_generator.py  test_damageinfo_settings.py  test_data_integrity.py  test_deeps_meter.py  test_deeps_overlay.py  test_deeps_parity.py  test_deeps_parsers.py  test_deeps_rolling_window.py  test_deeps_settings.py  test_deeps_trackers.py  test_design_tokens.py  test_docs_in_sync.py  test_focus_watcher.py  test_foreground.py  test_grid_model.py  test_grids_generator.py  test_hud_overlay.py  test_imports.py  test_log_name.py  test_manifest.py  test_mypy_gate.py  test_overlay_config.py  test_panels_construct.py  test_prefs_schema_covers_all_proxy_keys.py  test_profile_io.py  test_profile_share.py  test_resolution_scaling.py  test_settings_backup.py  test_settings_core.py  (+8 more)
tests/fixtures/deeps_parity/: expected_totals.json
tools/: deeps_parity_dump.py
