[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kazbars"
description = "KazBars — Standalone buff-tracking grid editor for Age of Conan"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Kaz" }]
dynamic = ["version"]
dependencies = [
    "ttkbootstrap>=1.10",
    "pywin32>=306; sys_platform == 'win32'",
    "pywinstyles>=1.8; sys_platform == 'win32'",
    "Pillow>=10.0,<12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8.0",
    "pre-commit>=3.7",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
kazbars = "kazbars.__main__:main"

[project.urls]
Homepage = "https://github.com/kazour/Kazbars"
Issues = "https://github.com/kazour/Kazbars/issues"
Changelog = "https://github.com/kazour/Kazbars/blob/main/docs/CHANGELOG.md"

[tool.hatch.version]
path = "src/kazbars/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/kazbars"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "RUF"]
ignore = [
    "E501",   # line too long — let formatter handle
    "E402",   # module-import-not-at-top — codebase convention: logger = getLogger() after imports
    "E741",   # ambiguous variable names (l, I, O) — used as AS2 loop counters in generators
    "B008",   # function call in default argument (common in tk callbacks)
    "B905",   # zip-without-explicit-strict — one site, low value
    "RUF001", # ambiguous unicode in strings — em dashes / × are intentional brand voice
    "RUF002", # same, in docstrings
    "RUF003", # same, in comments
    "RUF005", # collection-literal-concatenation — 3 sites, fine as-is
    "RUF012", # mutable-class-default — TODO: convert to ClassVar/field(default_factory=...)
    "RUF059", # unused-unpacked-variable — one site, fine as-is
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
# Blocking gate = the Tk-free logic core (modules that import neither tkinter
# nor ttkbootstrap). Bare `mypy` (CI's blocking step) checks exactly these and
# must stay clean. The Tk/ttkbootstrap UI modules are checked advisory-only in
# CI (`mypy src/kazbars`, continue-on-error) because ttkbootstrap's runtime
# `bootstyle` kwargs + dynamic widget typing emit ~80 unfixable errors that
# would otherwise drown out real regressions. Add a module here ONLY if it
# imports neither tkinter nor ttkbootstrap (see docs/architecture.md).
files = [
    "src/kazbars/__init__.py",
    "src/kazbars/__main__.py",
    "src/kazbars/boss_timer.py",
    "src/kazbars/buff_database.py",
    "src/kazbars/buff_xml.py",
    "src/kazbars/build_executor.py",
    "src/kazbars/build_utils.py",
    "src/kazbars/cast_timer.py",
    "src/kazbars/combat_monitor.py",
    "src/kazbars/deeps_meter.py",
    "src/kazbars/deeps_parsers.py",
    "src/kazbars/deeps_rolling_window.py",
    "src/kazbars/deeps_settings.py",
    "src/kazbars/deeps_trackers.py",
    "src/kazbars/foreground.py",
    "src/kazbars/grid_model.py",
    "src/kazbars/grids_generator.py",
    "src/kazbars/live_tracker_settings.py",
    "src/kazbars/paths.py",
    "src/kazbars/settings_manager.py",
]
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]
addopts = "-ra"
